[package]
name = "vhsland"
version = "0.1.0"
authors = ["Vladimir Pesterev <pesterev@protonmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
log = "0.4.8"
env_logger = "0.7.1"
hyper = "0.13"
tokio = { version = "0.2", features = ["macros", "signal", "fs", "stream", "time"] }
tokio-util = { version = "0.3", features = ["codec"] }
bytes = "0.5"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mp3-metadata = "0.3.2"